<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPokemonList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:itemCount="5"
        tools:listitem="@layout/card_pokemon" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:focusable="true"
        android:tint="@color/white"
        android:src="@drawable/ic_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_search"
        android:tint="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnMenu"
        app:layout_constraintEnd_toEndOf="@+id/btnMenu" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_filter"
        android:tint="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnSearch"
        app:layout_constraintEnd_toEndOf="@+id/btnSearch" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnRandom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_shuffle"
        android:tint="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnFilter"
        app:layout_constraintEnd_toEndOf="@+id/btnFilter" />

    <TextView
        android:id="@+id/txtSearch"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:background="@drawable/rounded_corner_all"
        android:gravity="center"
        android:text="Search pokemon"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/btnSearch"
        app:layout_constraintEnd_toStartOf="@+id/btnSearch"
        app:layout_constraintTop_toTopOf="@+id/btnSearch" />

    <TextView
        android:id="@+id/txtFilter"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:background="@drawable/rounded_corner_all"
        android:gravity="center"
        android:text="Filter types"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/btnFilter"
        app:layout_constraintEnd_toStartOf="@+id/btnFilter"
        app:layout_constraintTop_toTopOf="@+id/btnFilter" />

    <TextView
        android:id="@+id/txtRandom"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:background="@drawable/rounded_corner_all"
        android:gravity="center"
        android:text="Random mode"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/btnRandom"
        app:layout_constraintEnd_toStartOf="@+id/btnRandom"
        app:layout_constraintTop_toTopOf="@+id/btnRandom" />

</androidx.constraintlayout.widget.ConstraintLayout>