<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#C4C4C4"
    android:paddingTop="15dp">

    <Button
        android:id="@+id/btnSearchPokemon"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_all"
        android:text="Search"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:autofillHints=""
        android:background="@drawable/rounded_corner_all"
        android:backgroundTint="#F2F2F2"
        android:drawableLeft="@drawable/ic_search_black"
        android:hint="Search a pokemon by name"
        android:paddingLeft="16dp" />




</LinearLayout>